# arclib

./: .gitignore  Cargo.toml  Makefile  README.md
crates/compiler/: Cargo.toml
crates/compiler/src/: diagnostic.rs  extension.rs  lib.rs  request.rs  session.rs
crates/domain/: Cargo.toml
crates/domain/src/: error.rs  extension.rs  lib.rs  model.rs
crates/equation/: Cargo.toml
crates/equation/src/: extension.rs  lib.rs
crates/execution/: Cargo.toml
crates/execution/src/: command.rs  error.rs  graph.rs  lib.rs  plan.rs  resource.rs
crates/ir/: Cargo.toml
crates/ir/src/: attribute.rs  block.rs  error.rs  id.rs  insertion.rs  lib.rs  (+10 more)
crates/kernel/: Cargo.toml
crates/mesh/: Cargo.toml
crates/method/: Cargo.toml
crates/methods/continuum/finite-volume/: Cargo.toml  build.rs
crates/methods/continuum/finite-volume/cpp/: fvm_explicit_euler_f64_packed.cpp  fvm_laplacian_orthogonal_f64_packed.cpp  fvm_scale_f64_packed.cpp
crates/methods/continuum/finite-volume/examples/: diffusion_1d.rs  diffusion_1d_native.rs
crates/methods/continuum/finite-volume/src/: error.rs  extension.rs  kernels.rs  lib.rs  mesh.rs  native.rs  plan.rs  portable.rs
crates/methods/continuum/finite-volume/src/dialect/: interfaces.rs  mod.rs  operations.rs  types.rs
crates/methods/continuum/finite-volume/src/lowering/: equation.rs  kernel.rs  mod.rs
crates/operator/: Cargo.toml
crates/runtime/: Cargo.toml
docs/: rust.html
docs/source/: api.rst  conf.py  index.rst
example/: Cargo.toml
example/src/: main.rs
python/: Cargo.toml  pyproject.toml
python/src/: lib.rs
(+121 files in other folders)
